test/tests/MissingInnerClass.expected
MissingInnerClass.panda:1:12: error: unknown type 'Object.NotFound'
1 error
