test/tests/MissingInnerClass.panda
method m(o:Object.NotFound) {
}
